# ai-agent-org

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
personalities/: analyst.yaml  engineer.yaml  investigator.yaml  pm.yaml  reviewer.yaml  senior_engineer.yaml  tones.yaml
prompts/: engineer.md  pm.md  pm_rollback.md  pm_tiebreak.md  reviewer.md  senior_engineer.md  talk.md
prompts/themes/codebase_audit/: analyst.md  reviewer.md  senior_engineer.md  senior_tiebreak.md
prompts/themes/investigation/: investigator.md  reviewer.md  senior_engineer.md  senior_tiebreak.md
sandbox/default_source/: README.md
src/: client.py  config.py  context.py  events.py  logger.py  main.py  personalities.py  pipeline.py  schemas.py  talk.py
src/agents/: analyst.py  base.py  engineer.py  investigator.py  pm.py  reviewer.py  senior_engineer.py
src/themes/: __init__.py  base.py  codebase_audit.py  investigation.py  modification.py  phases.py
src/web/: app.py
src/web/static/: index.html  talk.html
tests/: test_client.py  test_codebase_audit_agents.py  test_config.py  test_context.py  test_events.py  test_investigation_agents.py  test_main.py  test_personalities.py  test_pipeline_flow.py  test_schemas.py  test_talk.py  test_themes.py  test_web.py
