[project]
name = "ai-agent-org"
version = "0.1.0"
description = "Multi-agent AI organization: PM → Engineer → Reviewer pipeline"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.86",
    "python-dotenv>=1.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.18",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-cov>=7.1",
    "ruff>=0.15",
    "bandit[toml]>=1.8",
    "pre-commit>=4.3",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["sandbox/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "S", "A", "C4", "PT", "RET", "SIM"]
ignore = ["S603", "S607", "UP047"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B104", "B112", "B404", "B603", "B607"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 0
